# emulsifier

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  cmdlistdevices.cpp  cmdlistdevices.h  main.cpp
cmake/: FindRtMidi.cmake
core/: CMakeLists.txt  core.cpp  midideviceinquiry.cpp  midideviceinquiry.h  midiio.cpp  midiio.h
docs/: device_discovery.md  firmware_file.md
emulsifier/emu/: crc32.py  firmware.py
gui/: CMakeLists.txt
